<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/bg_login"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logoBank"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginTop="14dp"
        android:src="@drawable/ic_asira" />

    <RelativeLayout
        android:id="@+id/lyLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_login_container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin16dp"
            android:paddingBottom="20dp">

            <TextView
                android:textAlignment="center"
                android:textColor="@color/colorAsiraText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/fontSuperLarge"
                android:text="Personal"/>

            <TextView
                android:textColor="@color/colorAsiraText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:drawablePadding="10dp"
                android:layout_marginTop="15dp"
                android:textSize="@dimen/fontNormal"
                android:drawableStart="@drawable/ic_phone_icon"
                android:text="Nomor Ponsel"/>

            <LinearLayout
                android:id="@+id/lltPhone"
                android:layout_marginTop="8dp"
                android:padding="3dp"
                android:background="@drawable/bg_textinput"
                android:layout_width="match_parent"
                android:layout_height="42dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:paddingStart="15dp"
                    android:paddingEnd="5dp"
                    android:text="+62"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/darkgreybackground"
                    android:textSize="@dimen/fontLarge" />

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:hint="81212760018"
                    android:paddingStart="0dp"
                    android:paddingEnd="20dp"
                    android:maxLength="18"
                    android:layout_gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/fontLarge" />

            </LinearLayout>

            <TextView
                android:textColor="@color/colorAsiraText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:drawablePadding="10dp"
                android:layout_marginTop="20dp"
                android:textSize="@dimen/fontNormal"
                android:drawableStart="@drawable/ic_password_icon"
                android:text="Kata Sandi"/>

            <LinearLayout
                android:id="@+id/lltPwd"
                android:layout_marginTop="8dp"
                android:padding="3dp"
                android:weightSum="1"
                android:background="@drawable/bg_textinput"
                android:layout_width="match_parent"
                android:layout_height="42dp">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_gravity="center_vertical"
                    android:imeOptions="actionDone"
                    android:paddingStart="15dp"
                    android:paddingEnd="25dp"
                    android:layout_weight="0.1"
                    android:hint="Masukkan kata sandi"
                    android:inputType="textPassword"
                    android:maxLength="25"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/fontLarge" />

                <ImageButton
                    android:id="@+id/openPass"
                    android:layout_weight="0.9"
                    android:padding="@dimen/_8sdp"
                    android:background="?attr/selectableItemBackground"
                    android:src="@drawable/ic_eye_icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <ImageButton
                    android:id="@+id/invisiblePass"
                    android:layout_weight="0.9"
                    android:visibility="gone"
                    android:padding="@dimen/_8sdp"
                    android:background="?attr/selectableItemBackground"
                    android:src="@drawable/ic_invisible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                android:id="@+id/resetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="?attr/selectableItemBackground"
                android:text="Lupa Sandi?"
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/fontNormal"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/lyButton"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/colorAsiraButtonBlue"
                    android:text="Masuk"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:textAlignment="center"
                    android:textColor="@color/colorAsiraText"
                    android:text="atau"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:textSize="@dimen/fontSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/colorAsiraAccent"
                    android:text="Daftar"
                    android:layout_marginBottom="@dimen/_48sdp"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>